--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/view-segment/view-segment.component.html
@@ -90,8 +90,10 @@
       <!-- Context -->
       <div class="section-data section-data--fixed">
         <span class="ft-16-600 section-data-title">{{ 'global.context.text' | translate }}</span>
-        <mat-chip class="ft-12-600" *ngIf="segment.context != 'ALL'">
-          {{ segment.context }}
+        <mat-chip *ngIf="segment.context != 'ALL'">
+          <span class="ft-12-600 chip-label">
+            {{ segment.context }}
+          </span>
         </mat-chip>
         <span class="ft-14-700 section-data-value" *ngIf="segment.context == 'ALL'">
           {{ segment.context }}
