mat-chips migration (#1212)
* initial mat-chips migration

* use mat-chip, not mat-chip-option

* Style mat-chip elements to match previous design

* Replace mat-chip-option with mat-chip

* Add chip-label class to span elements

* Remove redundant ng-deep rule

---------

Co-authored-by: Zack Lee <90279765+zackcl@users.noreply.github.com>
Co-authored-by: Zack Lee <zlee@carnegielearning.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -122,9 +122,13 @@
           </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let segment">
-          <mat-chip-list>
-            <mat-chip class="ft-12-600" *ngIf="segment.context != 'ALL'"> {{ segment.context }} </mat-chip>
-          </mat-chip-list>
+          <mat-chip-listbox>
+            <mat-chip *ngIf="segment.context != 'ALL'">
+              <span class="ft-12-600 chip-label">
+                {{ segment.context }}
+              </span>
+            </mat-chip>
+          </mat-chip-listbox>
           <span class="ft-12-600" *ngIf="segment.context == 'ALL'" style="margin-left: 10px">
             {{ segment.context }}
           </span>
