--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -216,33 +216,36 @@
           </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let experiment">
-          <mat-chip-list>
+          <mat-chip-listbox>
             <ng-container *ngFor="let context of experiment.context; let contextIndex = index">
               <mat-chip
                 *ngIf="contextIndex < 2; else moreContextTemplate"
-                class="chip ft-12-600"
                 (click)="filterExperimentByChips(context, ExperimentSearchKey.CONTEXT)"
               >
-                {{ context }}
+                <span class="ft-12-600 chip-label">
+                  {{ context }}
+                </span>
               </mat-chip>
               <ng-template #moreContextTemplate>
                 <mat-chip
-                  class="chip ft-12-600"
                   *ngIf="isAllChipsVisible(experiment.id, 'contextVisibility')"
                   (click)="filterExperimentByChips(context, ExperimentSearchKey.CONTEXT)"
                 >
-                  {{ context }}
+                  <span class="ft-12-600 chip-label">
+                    {{ context }}
+                  </span>
                 </mat-chip>
               </ng-template>
             </ng-container>
             <mat-chip
               *ngIf="experiment.context.length > 2 && !isAllChipsVisible(experiment.id, 'contextVisibility')"
-              class="chip ft-12-600"
               (click)="setChipsVisible(experiment.id, 'contextVisibility')"
             >
-              {{ '+' + (experiment.context.length - 2) }}
+              <span class="ft-12-600 chip-label">
+                {{ '+' + (experiment.context.length - 2) }}
+              </span>
             </mat-chip>
-          </mat-chip-list>
+          </mat-chip-listbox>
         </td>
       </ng-container>
 
@@ -253,33 +256,36 @@
           </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let experiment">
-          <mat-chip-list>
+          <mat-chip-listbox>
             <ng-container *ngFor="let tag of experiment?.tags; let tagIndex = index">
               <mat-chip
                 *ngIf="tagIndex < 2; else moreTagsTemplate"
-                class="chip ft-12-600"
                 (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
               >
-                {{ tag }}
+                <span class="ft-12-600 chip-label">
+                  {{ tag }}
+                </span>
               </mat-chip>
               <ng-template #moreTagsTemplate>
                 <mat-chip
-                  class="chip ft-12-600"
                   *ngIf="isAllChipsVisible(experiment.id, 'tagsVisibility')"
                   (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
                 >
-                  {{ tag }}
+                  <span class="ft-12-600 chip-label">
+                    {{ tag }}
+                  </span>
                 </mat-chip>
               </ng-template>
             </ng-container>
             <mat-chip
               *ngIf="experiment.tags?.length > 2 && !isAllChipsVisible(experiment.id, 'tagsVisibility')"
-              class="chip ft-12-600"
               (click)="setChipsVisible(experiment.id, 'tagsVisibility')"
             >
-              {{ '+' + (experiment.tags.length - 2) }}
+              <span class="ft-12-600 chip-label">
+                {{ '+' + (experiment.tags.length - 2) }}
+              </span>
             </mat-chip>
-          </mat-chip-list>
+          </mat-chip-listbox>
         </td>
       </ng-container>
 
