--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/table-row/table-row.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/table-row/table-row.component.scss
@@ -7,7 +7,7 @@ div {
     margin: 10px 5px 10px 25px;
   }
 
-  .mat-table {
+  .mat-mdc-table {
     mat-cell,
     mat-header-cell {
       display: flex;
