--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/create-query/create-query.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/create-query/create-query.component.scss
@@ -58,7 +58,7 @@ $tab-text-color: #8f9bb3;
   .zero-state {
     min-height: 250px;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   ::ng-deep .mat-tab-label-content {
     color: $tab-text-color;
     font-family: 'Open Sans';
