--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -259,7 +259,7 @@ $font-size-small: 15px;
     margin-bottom: 10px;
     padding: 0px 34px;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   .mat-tab-label {
     background-color: transparent;
     color: #8992a3;
@@ -274,7 +274,7 @@ $font-size-small: 15px;
       margin-left: 34px;
     }
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   .mat-tab-label-active {
     color: #3366ff;
     opacity: 1;
