mat table migration

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/common/table-view.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/common/table-view.scss
@@ -24,12 +24,12 @@
     table {
       width: 690px;
 
-      .mat-cell {
+      .mat-mdc-cell {
         padding: 5px;
         width: 50%;
       }
 
-      .mat-header-cell {
+      .mat-mdc-header-cell {
         padding: 5px;
         color: var(--grey-2);
       }
