--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-query-result/experiment-query-result.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-query-result/experiment-query-result.component.scss
@@ -51,11 +51,11 @@
     &-query .query-table {
       justify-content: space-between;
 
-      .mat-header-cell {
+      .mat-mdc-header-cell {
         justify-content: left;
       }
 
-      .mat-cell {
+      .mat-mdc-cell {
         justify-content: left;
       }
     }
