--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
@@ -71,7 +71,7 @@
     .cdk-column-queryName {
       width: 100%;
       max-width: 350px;
-      &.mat-cell {
+      &.mat-mdc-cell {
         margin-top: -3px;
       }
     }
