--- a/frontend/projects/upgrade/src/app/shared/components/query-result/query-result.component.scss
+++ b/frontend/projects/upgrade/src/app/shared/components/query-result/query-result.component.scss
@@ -14,11 +14,11 @@
       max-height: 500px;
       overflow: auto;
 
-      .mat-header-cell {
+      .mat-mdc-header-cell {
         padding-right: 10px;
       }
 
-      .mat-cell {
+      .mat-mdc-cell {
         padding-right: 10px;
 
         .mat-column-no {
