--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.theme.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.theme.scss
@@ -80,7 +80,7 @@
     border-bottom: 1px solid mat.get-color-from-palette($background, shadow-color);
   }
 
-  .payload-table-overview .mat-row.odd {
+  .payload-table-overview .mat-mdc-row.odd {
     background-color: mat.get-color-from-palette($background, table-shading);
   }
 }
