--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -37,7 +37,7 @@
     table {
       width: 100%;
 
-      .mat-cell {
+      .mat-mdc-cell {
         position: relative;
 
         &.mat-column-id {
@@ -49,7 +49,7 @@
         }
       }
 
-      .mat-header-cell {
+      .mat-mdc-header-cell {
         &.mat-column-metric {
           padding-left: 20px;
         }
