--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
@@ -52,14 +52,13 @@ mat-drawer {
         &.selected {
           border-radius: 7px;
           background-color: var(--blue);
-          color: var(--white);
+
+          .icon, .list-item-label {
+            color: var(--white);
+          }
         }
       }
     }
-  }
-
-  .profile {
-    text-decoration: none;
   }
 
   .user {
@@ -73,7 +72,7 @@ mat-drawer {
           border-radius: 7px;
           background-color: var(--blue);
 
-          span {
+          .list-item-label {
             color: var(--white);
           }
         }
@@ -88,8 +87,13 @@ mat-drawer {
       height: 26px;
     }
 
-    .logout-link {
+    .profile {
       display: flex;
+      text-decoration: none;
+    }
+
+    .logout-link {
+      display: inline-flex;
       align-items: center;
       margin-top: 10px;
 
