--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
@@ -33,11 +33,7 @@ mat-drawer {
     height: 100%;
 
     .list {
-      padding: 0 26px;
-
-      ::ng-deep .mat-list-item-content {
-        padding: 0;
-      }
+      padding: 0 10px;
 
       .nav-item {
         display: flex;
@@ -56,14 +52,13 @@ mat-drawer {
         &.selected {
           border-radius: 7px;
           background-color: var(--blue);
-          color: var(--white);
+
+          .icon, .list-item-label {
+            color: var(--white);
+          }
         }
       }
     }
-  }
-
-  .profile {
-    text-decoration: none;
   }
 
   .user {
@@ -77,7 +72,7 @@ mat-drawer {
           border-radius: 7px;
           background-color: var(--blue);
 
-          span {
+          .list-item-label {
             color: var(--white);
           }
         }
@@ -92,8 +87,13 @@ mat-drawer {
       height: 26px;
     }
 
-    .logout-link {
+    .profile {
       display: flex;
+      text-decoration: none;
+    }
+
+    .logout-link {
+      display: inline-flex;
       align-items: center;
       margin-top: 10px;
 
