Style mat-radio-button to match previous design

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.html
@@ -50,12 +50,13 @@
       <mat-radio-group formControlName="endCondition">
         <div class="date-picker-container">
           <mat-radio-button
-            class="ft-14-600"
             [value]="EndExperimentCondition.END_ON_DATE"
             color="primary"
             [disabled]="experimentInfo && experimentInfo.state == ExperimentState.ENROLLMENT_COMPLETE"
           >
-            {{ 'home.new-experiment.schedule.end-on.text' | translate }}
+            <span class="ft-14-600 radio-button-label">
+              {{ 'home.new-experiment.schedule.end-on.text' | translate }}
+            </span>
           </mat-radio-button>
           <mat-form-field class="ft-14-700">
             <input
@@ -74,12 +75,13 @@
 
         <div class="experiment-end-criteria">
           <mat-radio-button
-            class="ft-14-600"
             [value]="EndExperimentCondition.END_CRITERIA"
             color="primary"
             [disabled]="experimentInfo && experimentInfo.state == ExperimentState.ENROLLMENT_COMPLETE"
           >
-            {{ 'home.new-experiment.schedule.end-criteria.text' | translate }}
+            <span class="ft-14-600 radio-button-label">
+              {{ 'home.new-experiment.schedule.end-criteria.text' | translate }}
+            </span>
           </mat-radio-button>
           <div class="end-criteria" *ngIf="groupType">
             <mat-form-field class="ft-12-700 group-type-control">
