--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -10,8 +10,10 @@
 
     <mat-radio-group formControlName="endCondition">
       <div class="date-picker-container">
-        <mat-radio-button class="ft-14-600" [value]="EndExperimentCondition.END_ON_DATE" color="primary">
-          {{ 'home.new-experiment.schedule.end-on.text' | translate }}
+        <mat-radio-button [value]="EndExperimentCondition.END_ON_DATE" color="primary">
+          <span class="ft-14-600 radio-button-label">
+            {{ 'home.new-experiment.schedule.end-on.text' | translate }}
+          </span>
         </mat-radio-button>
         <mat-form-field class="ft-14-700">
           <input
@@ -29,8 +31,10 @@
       </div>
 
       <div class="experiment-end-criteria">
-        <mat-radio-button class="ft-14-600" [value]="EndExperimentCondition.END_CRITERIA" color="primary">
-          {{ 'home.new-experiment.schedule.end-criteria.text' | translate }}
+        <mat-radio-button [value]="EndExperimentCondition.END_CRITERIA" color="primary">
+          <span class="ft-14-600 radio-button-label">
+            {{ 'home.new-experiment.schedule.end-criteria.text' | translate }}
+          </span>
         </mat-radio-button>
         <div class="end-criteria" *ngIf="experiment.group">
           <mat-form-field class="ft-14-700 group-type-control">
