--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -284,6 +284,19 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   }
 }
 
+.mat-mdc-radio-button {
+  .mdc-radio {
+    margin-left: -10px;
+  }
+
+  .radio-button-label {
+    margin-left: -6px;
+    color: var(--black-2);
+    letter-spacing: normal;
+    user-select: none;
+  }
+}
+
 // Material library doesn't expose any params to prevent content truncation for these widgets.
 // Therefore we override the css. If option appears in future, these can go away.
 
