migrate to mdc tabs wip

--- a/frontend/projects/upgrade/src/app/features/dashboard/common/tabs-view.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/common/tabs-view.scss
@@ -23,36 +23,38 @@ $tab-text-color: #8f9bb3;
     padding: 0;
   }
 
-  ::ng-deep .logs-tabs .mat-tab-header {
+  ::ng-deep .logs-tabs .mat-mdc-tab-header {
     margin-bottom: 50px;
     border-bottom: none !important;
   }
-
-  ::ng-deep .mat-tab-label-content {
-    color: $tab-text-color;
-    font-family: 'Open Sans';
-    font-size: var(--text-size-xx-large);
-    font-weight: 600;
-  }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   ::ng-deep .mat-tab-label-active {
     opacity: 1;
-
+    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
     ::ng-deep .mat-tab-label-content {
       color: var(--blue);
     }
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   ::ng-deep .mat-tab-label-container {
     padding: 34px 34px 0;
     height: 94px;
   }
 
-  ::ng-deep .mat-tab-header {
+  ::ng-deep .mat-mdc-tab-header {
     border-bottom: 0 !important;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
   ::ng-deep .mat-tab-body-content {
     padding: 24px 34px 34px;
   }
+}
+
+::ng-deep .mdc-tab__text-label {
+  color: $tab-text-color;
+  font-family: 'Open Sans';
+  font-size: var(--text-size-xx-large);
+  font-weight: 600;
 }
