--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/profile-root/profile-root.component.scss
@@ -2,7 +2,7 @@
 
 .profile-container {
   height: calc(100% - 25px); // Subtract header height
-
+  /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   ::ng-deep .mat-tab-body-content {
     padding: 10px 34px 34px !important;
   }
