--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/import-experiment/import-experiment.component.scss
@@ -34,6 +34,12 @@
     .warn-msg {
       color: var(--blue);
     }
+
+    .table {
+      mat-row {
+        height: auto;
+      }
+    }
   }
 
   .button-container {
