--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/segment-experiment-list/segment-experiment-list.component.scss
@@ -26,6 +26,7 @@ $experiment-state-light-color: #8f9bb3;
 
         mat-header-row {
           min-height: 35px;
+          max-height: 35px;
         }
 
         mat-row {
