--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.scss
@@ -36,6 +36,7 @@
 
       .mat-mdc-header-row {
         min-height: 35px;
+        max-height: 35px;
         justify-content: space-between;
       }
 
@@ -75,7 +76,7 @@
 
       .cdk-column-actions {
         margin-left: 15px;
-        padding-right: 10px;
+        padding-right: 13px;
         justify-content: flex-end;
 
         .row-download-btn {
@@ -83,8 +84,7 @@
           background-color: transparent;
 
           .icon {
-            margin-top: -5px;
-            margin-left: -3px;
+            margin-top: 1px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -103,8 +103,6 @@
           }
 
           .icon {
-            margin-top: -5px;
-            margin-left: -3px;
             display: flex;
             justify-content: center;
             align-items: center;
