--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-participants/experiment-participants.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-participants/experiment-participants.component.scss
@@ -18,6 +18,7 @@
 
     mat-header-row {
       min-height: 35px;
+      max-height: 35px;
       justify-content: space-between;
     }
 
@@ -57,7 +58,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: -3px;
+      margin-top: -4px;
+      margin-left: -16px;
       min-width: 60px;
       height: 16px;
       font-size: var(--text-size-x-large);
