--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/metrics/metrics.component.scss
@@ -6,11 +6,13 @@
 
     mat-header-row {
       min-height: 35px;
+      max-height: 35px;
       justify-content: space-between;
     }
 
     mat-row {
       min-height: 46px;
+      height: auto;
       justify-content: space-between;
       align-items: flex-start;
     }
@@ -22,6 +24,7 @@
 
     mat-cell {
       justify-content: left;
+      align-items: flex-start;
       margin-bottom: -11px;
     }
 
@@ -80,7 +83,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 1px;
+      margin-top: 16px;
+      margin-left: -16px;
       min-width: 60px;
       height: 16px;
       font-size: var(--text-size-x-large);
