--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
@@ -9,6 +9,7 @@
 
     mat-header-row {
       min-height: 35px;
+      max-height: 35px;
     }
 
     mat-row {
@@ -31,7 +32,7 @@
       margin-right: 0;
       padding-right: 0;
       flex: 0 0 10%;
-      justify-content: left;
+      justify-content: center;
     }
 
     .cdk-column-type {
@@ -41,6 +42,7 @@
     .cdk-column-id {
       flex: 0 0 55%;
       justify-content: left;
+      padding-top: 5px;
     }
     .cdk-column-memberNumber {
       flex: 0 0 10%;
@@ -48,11 +50,12 @@
     }
 
     .remove-icon {
-      position: relative;
-      top: -3px;
-      width: 18px;
-      height: 18px;
+      margin-right: -5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: var(--text-size-x-large);
+      color: gray;
 
       &:hover {
         cursor: pointer;
